k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployer-web
  namespace: deployer
spec:
  selector:
    app: deployer-web
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployer-web
  namespace: deployer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployer-web
  template:
    metadata:
      labels:
        app: deployer-web
    spec:
      containers:
        - name: deployer-web
          image: registry.sviniabanditka.com/deployer-web:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 200m
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
