k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployer-ingress
  namespace: deployer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - deployer.sviniabanditka.com
      secretName: deployer-tls
  rules:
    - host: deployer.sviniabanditka.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: deployer-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deployer-web
                port:
                  number: 80
